handle no data and close button aligned correctly

--- a/app/styles/stakeholder-modal.css
+++ b/app/styles/stakeholder-modal.css
@@ -34,20 +34,27 @@
   border-right: solid 3px white;
 }
 
-.stakeholder-modal button{
-  position: relative;
-  bottom: 0px;
-}
 
 .stakeholder-modal section{
   margin: 0 10px 0 10px;
+  min-height: 30px;
+  display: flex;
 }
 
-.stakeholder-tags-section{
+.stakeholder-modal footer{
+  position: relative;
+  bottom: 0px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+
+.stakeholder-tags-section{
+  flex-flow: row wrap;
   align-items: flex-start;
+  justify-content: space-between;
+  height: auto;
 }
 
 .stakeholder-tag{
@@ -60,8 +67,15 @@
   text-transform:capitalize;
   font-weight: bold;
   font-size: 10pt;
+  margin-top: 0;
+  margin-bottom: 0.7em;
 }
 
+.stakeholder-no-data{
+  font-size: 10pt;
+  text-align: center;
+  margin: auto;
+}
 
 .stakeholder-name{
   display: inline-block;
